--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <section class="section cta">
-        <div class="section-content container row">
+        <div class="section-content container">
           <div class="header-container">
             <h2 class="typography-title">Beyond the Veil</h2>
             <h3 class="typography-headline">Unraveling Cosmic Mysteries with Unprecedented Insights.</h3>
