--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="telescopes-copy row">
             <h3 class="subsection-headline">Space Telescopes</h3>
             <div>
-              <p class="subsection-copy text-gray-tertiary">
+              <p class="subsection-copy text-gray-tertiary text-xl">
                 Satellites equipped with powerful telescopes are positioned in space to observe celestial objects without the interference of Earth's atmosphere. They provide unprecedented views of
                 distant galaxies, stars, and cosmic phenomena, contributing to our understanding of the origins of the universe, black holes, exoplanets, and other astronomical phenomena.
               </p>
@@ -81,21 +81,21 @@
                   <div class="badge-content row">
                     <span class="badge-caption">Aperture Size</span>
                     <span class="badge-value">21.3</span>
-                    <span class="badge-unit">feet</span>
+                    <span class="badge-unit text-lg">feet</span>
                   </div>
                 </figure>
                 <figure class="badge badge-resolution">
                   <div class="badge-content row">
                     <span class="badge-caption">Resolution</span>
                     <span class="badge-value">0.05</span>
-                    <span class="badge-unit">arcseconds</span>
+                    <span class="badge-unit text-lg">arcseconds</span>
                   </div>
                 </figure>
                 <figure class="badge badge-orbit">
                   <div class="badge-content row">
                     <span class="badge-caption">Orbit</span>
                     <span class="badge-value">930<span class="badge-unit">k</span></span>
-                    <span class="badge-unit">miles</span>
+                    <span class="badge-unit text-lg">miles</span>
                   </div>
                 </figure>
               </div>
