--- a/index.html
+++ b/index.html
@@ -5,15 +5,34 @@
     <meta name="viewport" content="width=device-width" />
     <title>Unveil the Cosmic Mysteries - Stellar</title>
     <meta name="Description" content="Embark on an extraordinary cosmic journey, exploring the wonders of space, from our solar system to distant galaxies." />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/utility.css" />
-    <link rel="stylesheet" href="styles/style.css" />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/utility.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+
+    <!-- JS -->
+    <script src="./scripts/index.js" type="module"></script>
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400..700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <!-- Mobile Navigation Menu -->
+    <section id="mobile-nav" class="hidden">
+      <div class="mobile-nav-content">
+        <nav class="row container">
+          <a href="" class="column">Explore</a>
+          <a href="" class="column">News & Discoveries</a>
+          <a href="" class="column">Mission Updates</a>
+          <a href="" class="column">Community</a>
+          <a href="" class="column">Resources</a>
+        </nav>
+      </div>
+    </section>
+
     <header id="site-header" class="row align-items-center">
       <div class="container row align-items-center justify-content-spacebetween column">
         <h1 class="column"><a href="#">Stellar</a></h1>
