--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-SG">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Unveil the Cosmic Mysteries - Stellar</title>
     <meta name="Description" content="Embark on an extraordinary cosmic journey, exploring the wonders of space, from our solar system to distant galaxies." />
 
