--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="copy-block copy-block-feature">
             <h3 class="copy-block-headline typography-copy-block">Navigation and Positioning</h3>
             <p class="copy-block-copy typography-copy-block">
-              Global Navigation Satellite Systems (GNSS) like GPS, GLONASS, and Galileo provide precise positioning, navigation, and timing services worldwide.<sup class="footnote footnote-number"
+              Global Navigation Satellite Systems (GNSS) like GPS, GLONASS, and Galileo provide precise positioning, navigation, and timing services worldwide.<sup class="footnote footnote-number text-gray-tertiary"
                 ><a href="#footnote-1" aria-label="Footnote 1">1</a></sup
               >
               These systems allow for accurate mapping, navigation for vehicles and ships, geolocation services on smartphones, and synchronization of critical infrastructure and financial
