--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
 
     <!-- JS -->
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/index.js" defer></script>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
