--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Mobile Navigation Menu -->
     <section id="mobile-nav" class="hidden">
       <div class="mobile-nav-content">
-        <nav class="row container">
+        <nav class="row container text-sm">
           <a href="" class="column">Explore</a>
           <a href="" class="column">News & Discoveries</a>
           <a href="" class="column">Mission Updates</a>
@@ -35,9 +35,9 @@
 
     <header id="site-header" class="row align-items-center">
       <div class="container row align-items-center justify-content-spacebetween column">
-        <h1 class="column"><a href="#">Stellar</a></h1>
+        <h2 class="column"><a href="#">Stellar</a></h2>
         <nav class="column">
-          <ul class="row align-items-center">
+          <ul class="row align-items-center text-sm">
             <li class="column"><a href="#">Explore</a></li>
             <li class="column"><a href="#">News & Discoveries</a></li>
             <li class="column"><a href="#">Mission Updates</a></li>
@@ -73,9 +73,9 @@
           </picture>
         </div>
         <div class="section-content container column">
-          <h2 class="eyebrow-section">Reach for the Stars</h2>
-          <h3 class="headline-section">Unveil the Cosmic Mysteries.</h3>
-          <p class="intro-copy large-10 small-12">
+          <h2 class="eyebrow-section text-3xl">Reach for the Stars</h2>
+          <h3 class="headline-section text-6xl">Unveil the Cosmic Mysteries.</h3>
+          <p class="intro-copy large-10 small-12 text-3xl">
             Embark on an extraordinary cosmic journey, exploring the wonders of space, from our solar system to distant galaxies. Unveil enigmatic mysteries, witness celestial beauty, and expand your
             understanding of the universe. Let the cosmos ignite your passion for exploration.
           </p>
@@ -89,7 +89,7 @@
             </figure>
           </div>
           <div class="telescopes-copy row">
-            <h3 class="subsection-headline column">Space Telescopes</h3>
+            <h3 class="subsection-headline column text-2xl">Space Telescopes</h3>
             <div class="column">
               <p class="subsection-copy text-gray-tertiary text-xl">
                 Satellites equipped with powerful telescopes are positioned in space to observe celestial objects without the interference of Earth's atmosphere. They provide unprecedented views of
@@ -99,22 +99,22 @@
                 <figure class="badge badge-aperture column">
                   <div class="badge-content row">
                     <span class="badge-caption">Aperture Size</span>
-                    <span class="badge-value">21.3</span>
-                    <span class="badge-unit text-lg">feet</span>
+                    <span class="badge-value text-4xl">21.3</span>
+                    <span class="badge-unit">feet</span>
                   </div>
                 </figure>
                 <figure class="badge badge-resolution column">
                   <div class="badge-content row">
                     <span class="badge-caption">Resolution</span>
-                    <span class="badge-value">0.05</span>
-                    <span class="badge-unit text-lg">arcseconds</span>
+                    <span class="badge-value text-4xl">0.05</span>
+                    <span class="badge-unit">arcseconds</span>
                   </div>
                 </figure>
                 <figure class="badge badge-orbit column">
                   <div class="badge-content row">
                     <span class="badge-caption">Orbit</span>
-                    <span class="badge-value">930<span class="badge-unit">k</span></span>
-                    <span class="badge-unit text-lg">miles</span>
+                    <span class="badge-value text-4xl">930<span class="badge-value-unit">k</span></span>
+                    <span class="badge-unit">miles</span>
                   </div>
                 </figure>
               </div>
@@ -131,8 +131,8 @@
             </picture>
           </div>
           <div class="copy-block copy-block-feature column">
-            <h3 class="copy-block-headline typography-copy-block">High-Resolution Imaging</h3>
-            <p class="copy-block-copy typography-copy-block text-gray-tertiary">
+            <h3 class="copy-block-headline typography-copy-block text-2xl">High-Resolution Imaging</h3>
+            <p class="copy-block-copy typography-copy-block text-gray-tertiary text-lg">
               Satellite systems equipped with advanced cameras and sensors capture high-resolution images of Earth, revealing intricate details of our planet's surface, weather patterns, and
               environmental changes. These images assist in various fields, including urban planning, agriculture, disaster response, and climate monitoring.
             </p>
@@ -147,8 +147,8 @@
             </picture>
           </div>
           <div class="copy-block copy-block-feature column">
-            <h3 class="copy-block-headline typography-copy-block">Communication Networks</h3>
-            <p class="copy-block-copy typography-copy-block">
+            <h3 class="copy-block-headline typography-copy-block text-2xl">Communication Networks</h3>
+            <p class="copy-block-copy typography-copy-block text-lg">
               Satellites serve as communication relays, connecting people across the globe. They facilitate global telecommunication, enabling phone calls, internet access, broadcasting, and data
               transfer on a global scale. Satellites also support emergency communication during natural disasters and in remote regions where terrestrial infrastructure is limited.
             </p>
@@ -164,8 +164,8 @@
             </picture>
           </div>
           <div class="copy-block copy-block-feature">
-            <h3 class="copy-block-headline typography-copy-block">Navigation and Positioning</h3>
-            <p class="copy-block-copy typography-copy-block">
+            <h3 class="copy-block-headline typography-copy-block text-2xl">Navigation and Positioning</h3>
+            <p class="copy-block-copy typography-copy-block text-lg">
               Global Navigation Satellite Systems (GNSS) like GPS, GLONASS, and Galileo provide precise positioning, navigation, and timing services worldwide.<sup class="footnote footnote-number text-gray-tertiary"
                 ><a href="#footnote-1" aria-label="Footnote 1">1</a></sup
               >
@@ -178,11 +178,11 @@
       <section class="section cta">
         <div class="section-content container">
           <div class="header-container">
-            <h2 class="typography-title">Beyond the Veil</h2>
-            <h3 class="typography-headline">Unraveling Cosmic Mysteries with Unprecedented Insights.</h3>
+            <h2 class="typography-title text-2xl">Beyond the Veil</h2>
+            <h3 class="typography-headline text-5xl">Unraveling Cosmic Mysteries with Unprecedented Insights.</h3>
           </div>
           <div class="typography-intro">
-            <p class="copy-block-paragraph text-glyph-gray-tertiary font-semibold text-xl">
+            <p class="copy-block-paragraph text-glyph-gray-tertiary font-semibold text-2xl">
               These space telescopes have revolutionized our understanding of the universe, each with unique capabilities and contributions to astronomical research. They have provided us with
               unprecedented insights into the cosmos, revealing breathtaking imagery and expanding our knowledge of celestial objects and phenomena across different wavelengths of light.
             </p>
@@ -211,7 +211,7 @@
       </section>
     </main>
     <footer id="site-footer">
-      <div class="container">
+      <div class="container text-sm">
         <section class="footnotes" aria-label="Footnotes">
           <ul>
             <li id="footnote-0"><small>*</small> Images used under license from Unsplash.</li>
